src/components/screens/wallet/delegateProfile/delegateProfile.css
@import '../../../../app/mixins.css';

.detailsContainer,
.highlightContainer {
  & h1.heading {
    @mixin headingNormal;

    font-size: 20px;
  }

  & .content {
    flex-flow: row nowrap;
    width: calc(100% + 1em); /* stylelint-disable-line unit-whitelist */
  }
}

.container {
  display: flex;
  flex-direction: column;

  & .statsContainer {
    flex-flow: row nowrap;
  }

  & .votesWrapper {
    width: 100%;
  }

  & .votesContainer {
    display: grid !important;
    grid-template-columns: repeat(auto-fill, 25%);
    box-sizing: border-box;
    justify-content: center !important;
    grid-gap: 30px 0px;

    & > header {
      display: none;
    }

    & button {
      grid-column: 1/5;
      margin-top: -15px;
    }
  }
}

@media (--medium-viewport) {
  .container {
    & .statsContainer {
      flex-flow: row wrap;
    }

    & .votesContainer {
      grid-template-columns: repeat(auto-fill, 33.3%);

      & button {
        grid-column: 1/4;
      }
    }
  }
}

.details {
  flex-shrink: 0;
  flex-grow: 1;

  & .itemContainer {
    border-bottom: 1px solid var(--color-platinum);
    padding: 16px 0;
    margin-left: 0;

    &:last-child {
      border: none;
      padding-bottom: 0;
    }

    &:first-child {
      padding-top: 0;
    }
  }

  & .item {
    margin-left: 16px;

    & .title {
      @mixin contentNormal;

      color: var(--color-slate-gray);

      &:global(.dark) {
        color: var(--color-manatee-gray);
      }
    }

    & .value {
      margin-top: 8px;
      color: var(--color-maastricht-blue);
    }
  }
}

.column {
  & .highlight {
    padding: 0;
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
    height: 156px;

    &:nth-child(2) {
      margin: 0;
    }

    & .content {
      width: max-content;
      display: flex;
      flex-direction: column;
      padding-left: 20px;
      padding-top: 20px;

      & .title {
        @mixin contentNormal;

        color: var(--color-slate-gray);
        margin-bottom: 15px;

        &:global(.dark) {
          color: var(--color-manatee-gray);
        }
      }

      & > *:not(.title):not(.highlighIcon) {
        @mixin delegatePerformanceValueFont;

        color: var(--color-maastricht-blue);
      }
    }

    & .highlighIcon {
      align-self: flex-end;
      display: flex;
      flex: 1;
      justify-content: flex-end;
      height: 120px;
      width: 170px;

      &.productivity {
        height: 122px;
        width: 206px;
      }

      &.forgedBlocks {
        padding-right: 20px;
      }

      &.missedBlocks {
        justify-content: flex-end;
        align-items: center;
        height: 156px;
        width: 216px;
      }

      &.reward {
        height: 108px;
        width: 196px;
        padding-right: 20px;
      }
    }
  }

  & .full {
    padding: 0;
    display: flex;
    flex-direction: column;
    height: 332px;

    &:nth-child(2) {
      margin: 0;
    }

    & .content {
      display: flex;
      flex-direction: column;
      padding-left: 20px;
      padding-top: 20px;

      & .title {
        @mixin contentNormal;

        color: var(--color-slate-gray);
        margin-bottom: 15px;

        &:global(.dark) {
          color: var(--color-manatee-gray);
        }
      }

      & .delegateDescription {
        & p {
          font-size: var(--paragraph-font-size-s);
        }

        & p:last-child {
          margin-top: 0 !important;
        }
      }

      & > *:not(.title):not(.delegateDescription):not(.highlighIcon) {
        @mixin delegatePerformanceValueFont;

        color: var(--color-maastricht-blue);
      }
    }

    & .highlighIcon {
      align-self: flex-end;
      display: flex;
      flex: 1;
      justify-content: flex-end;
      height: 120px;
      width: 170px;

      &.delegateActive {
        padding-right: 10px;
      }
    }
  }
}

.icon {
  height: 16px;
}

.voteRow {
  width: 238px;
  width: max-content;
  display: flex;
  align-items: center;

  &:hover {
    text-decoration: none;
  }

  & .address {
    @mixin contentLargest;

    padding-left: 10px;
    color: var(--color-maastricht-blue);
  }

  &::after {
    display: none;
    position: absolute;
    width: calc(100% - 30px);
    height: 1px;
    left: 15px;
    margin-top: 60px;
    z-index: 0;
    background: var(--color-platinum);
  }

  &:nth-child(4n) {
    &::after {
      content: '';
      display: block;
    }
  }

  @media (--medium-viewport) {
    &:nth-child(4n) {
      &::after {
        display: none;
      }
    }

    &:nth-child(3n) {
      &::after {
        content: '';
        display: block;
      }
    }
  }
}

.totalVotes {
  color: var(--color-slate-gray);
  padding-left: 5px;
}

